--- a/ALFF_CBF_IDEMO/R/IMCo_Validation.Rmd
+++ b/ALFF_CBF_IDEMO/R/IMCo_Validation.Rmd
@@ -90,11 +90,10 @@ rm(demographics)
 
 # Write IMCo bash script
 ```{r}
-bash_file <- rep(0, 2)
-for(i in 1:2) {
-# bash_file <- rep(0, nrow(input_filepaths))
-# for(i in 1:nrow(input_filepaths)) {
-  
+# bash_file <- rep(0, 2)
+# for(i in 1:2) {
+bash_file <- rep(0, nrow(input_filepaths))
+for(i in 1:nrow(input_filepaths)) {
   line <- input_filepaths[i, ]
   out_name <- line[1]
   subject_files <- paste(line[1, 2], line[1, 3], line[1, 4], sep = ",")
